/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package state;

import "msgs/msgs.proto";

option go_package = "github.com/IBM/mirbft/pkg/pb/state";

// Event represents a state event to be injected into the state machine
message Event {
    // TODO, normalize naming, for instance Complete/Completed
    oneof type {
        EventInitialParameters initialize = 1;
	EventLoadPersistedEntry load_persisted_entry = 2;
	EventLoadCompleted complete_initialization = 3;
        EventHashResult hash_result = 4;
        EventCheckpointResult checkpoint_result = 5;
        EventRequestPersisted request_persisted = 6;
        EventStateTransferComplete state_transfer_complete = 7;
        EventStateTransferFailed state_transfer_failed = 8;
        EventStep step = 9;
	EventTickElapsed tick_elapsed = 10;
	EventActionsReceived actions_received = 11;
    }
}

message EventInitialParameters {
    uint64 id = 1;
    uint32 batch_size = 2;
    uint32 heartbeat_ticks = 3;
    uint32 suspect_ticks = 4;
    uint32 new_epoch_timeout_ticks = 5;
    uint32 buffer_size = 6;
}

message EventLoadPersistedEntry {
    uint64 index = 1;
    msgs.Persistent entry = 2;
}

message EventLoadCompleted {}

message EventCheckpointResult {
        uint64 seq_no = 1;
        bytes value = 2;
        msgs.NetworkState network_state = 3;
	bool reconfigured = 4;
}

message EventRequestPersisted {
    msgs.RequestAck request_ack = 1;
}

message EventStateTransferComplete {
    uint64 seq_no = 1;
    bytes checkpoint_value = 2;
    msgs.NetworkState network_state = 3;
}

message EventStateTransferFailed {
    uint64 seq_no = 1;
    bytes checkpoint_value = 2;
}

message EventStep {
    uint64 source = 1;
    msgs.Msg msg = 2;
}

message EventTickElapsed {}

message HashOrigin {
    message Batch {
        uint64 source = 1;
        uint64 epoch = 2;
        uint64 seq_no = 3;
        repeated msgs.RequestAck request_acks = 5;
    }

    message VerifyBatch { 
        uint64 source = 1;
        uint64 seq_no = 2;
        repeated msgs.RequestAck request_acks = 3;
        bytes expected_digest = 4;
    }

    message EpochChange {
        uint64 source = 1;
        uint64 origin = 2;
        msgs.EpochChange epoch_change = 3;
    }

    oneof type {
        Batch batch = 1;
        EpochChange epoch_change = 2;
        VerifyBatch verify_batch = 3;
    }
}

message EventHashResult {
    bytes digest = 1;
    HashOrigin origin = 2;
}

message EventActionsReceived{}

message Action {
    oneof type {
       ActionSend send = 1;
       ActionHashRequest hash = 2;
       ActionWrite append_write_ahead = 3;
       ActionTruncate truncate_write_ahead = 4;
       ActionCommit commit = 5;
       ActionCheckpoint checkpoint = 6;
       ActionRequestSlot allocated_request = 7;
       msgs.RequestAck correct_request = 8;
       ActionForward forward_request = 9;
       ActionStateTarget state_transfer = 10;
    }
}

message ActionSend {
    repeated uint64 targets = 1;
    msgs.Msg msg = 2;
}

message ActionTruncate {
    uint64 index = 1;
}

message ActionWrite {
    uint64 index = 1;
    msgs.Persistent data = 2;
}

message ActionCommit {
    msgs.QEntry batch = 1;
}

message ActionCheckpoint {
    uint64 seq_no = 2;
    msgs.NetworkState.Config network_config = 3;
    repeated msgs.NetworkState.Client client_states = 4;
}

message ActionRequestSlot {
    uint64 client_id = 1;
    uint64 req_no = 2;
}

message ActionForward {
    repeated uint64 targets = 1;
    msgs.RequestAck ack = 2;
}

message ActionHashRequest {
    repeated bytes data = 1;
    HashOrigin origin = 2;
}

message ActionStateTarget {
    uint64 seq_no = 1;
    bytes value = 2;
}

